// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirm Add Institutional Feature does not render without connectRequest 1`] = `<div />`;

exports[`Confirm Add Institutional Feature handles error 1`] = `
<div>
  <div
    class="box page-container box--flex-direction-row"
  >
    <div
      class="box page-container__header box--flex-direction-row"
    >
      <p
        class="box mm-text page-container__title mm-text--body-md mm-text--color-text-default box--flex-direction-row"
      >
        Institutional Features
      </p>
      <p
        class="box mm-text page-container__subtitle mm-text--body-md mm-text--color-text-default box--flex-direction-row"
      >
        The page at origin would like to authorise the following project’s compliance settings in MetaMask Institutional
      </p>
    </div>
    <div
      class="box page-container__content box--flex-direction-row"
    >
      <p
        class="box mm-text mm-text--body-sm mm-text--color-text-default box--margin-top-3 box--margin-right-8 box--margin-left-8 box--flex-direction-row"
      >
        Project Name
      </p>
      <p
        class="box mm-text mm-text--body-lg-medium mm-text--color-text-default mm-text--overflow-wrap-break-word box--margin-top-1 box--margin-right-8 box--margin-bottom-1 box--margin-left-8 box--flex-direction-row"
      >
        projectName
      </p>
      <p
        class="box mm-text mm-text--body-xs mm-text--color-text-muted mm-text--overflow-wrap-break-word box--margin-right-8 box--margin-left-8 box--flex-direction-row"
      >
        Id
        : 
        projectId
      </p>
    </div>
    <p
      class="box mm-text mm-text--body-md mm-text--text-align-center mm-text--color-text-default box--margin-top-4 box--flex-direction-row"
    >
      Actions must be plain objects. Use custom middleware for async actions.
    </p>
    <div
      class="box page-container__footer box--flex-direction-row"
    >
      <footer>
        <button
          class="button btn--rounded btn-default btn--large"
          role="button"
          tabindex="0"
        >
          Cancel
        </button>
        <button
          class="button btn--rounded btn-primary btn--large"
          role="button"
          tabindex="0"
        >
          Confirm
        </button>
      </footer>
    </div>
  </div>
</div>
`;

exports[`Confirm Add Institutional Feature opens confirm institutional sucessfully 1`] = `
<div>
  <div
    class="box page-container box--flex-direction-row"
  >
    <div
      class="box page-container__header box--flex-direction-row"
    >
      <p
        class="box mm-text page-container__title mm-text--body-md mm-text--color-text-default box--flex-direction-row"
      >
        Institutional Features
      </p>
      <p
        class="box mm-text page-container__subtitle mm-text--body-md mm-text--color-text-default box--flex-direction-row"
      >
        The page at origin would like to authorise the following project’s compliance settings in MetaMask Institutional
      </p>
    </div>
    <div
      class="box page-container__content box--flex-direction-row"
    >
      <p
        class="box mm-text mm-text--body-sm mm-text--color-text-default box--margin-top-3 box--margin-right-8 box--margin-left-8 box--flex-direction-row"
      >
        Project Name
      </p>
      <p
        class="box mm-text mm-text--body-lg-medium mm-text--color-text-default mm-text--overflow-wrap-break-word box--margin-top-1 box--margin-right-8 box--margin-bottom-1 box--margin-left-8 box--flex-direction-row"
      >
        projectName
      </p>
      <p
        class="box mm-text mm-text--body-xs mm-text--color-text-muted mm-text--overflow-wrap-break-word box--margin-right-8 box--margin-left-8 box--flex-direction-row"
      >
        Id
        : 
        projectId
      </p>
    </div>
    
    <div
      class="box page-container__footer box--flex-direction-row"
    >
      <footer>
        <button
          class="button btn--rounded btn-default btn--large"
          role="button"
          tabindex="0"
        >
          Cancel
        </button>
        <button
          class="button btn--rounded btn-primary btn--large"
          role="button"
          tabindex="0"
        >
          Confirm
        </button>
      </footer>
    </div>
  </div>
</div>
`;
